# cdpr_ros2_ws

./: .gitignore  README.md  gz_gui_log.txt  gz_headless_log.txt  launch_all.sh  test_cdpr.sh
.github/workflows/: main.yml
cdpr_venv/: pyvenv.cfg
install/: local_setup.sh  setup.sh
install/cdpr_control/lib/cdpr_control/: cdpr_controller
install/cdpr_control/share/ament_index/resource_index/package_run_dependencies/: cdpr_control
install/cdpr_control/share/ament_index/resource_index/parent_prefix_path/: cdpr_control
install/cdpr_control/share/cdpr_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cdpr_control/share/cdpr_control/cmake/: cdpr_controlConfig.cmake
install/cdpr_description/share/cdpr_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cdpr_gz_plugins/share/ament_index/resource_index/package_run_dependencies/: cdpr_gz_plugins
install/cdpr_gz_plugins/share/cdpr_gz_plugins/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cdpr_control/: CMakeLists.txt
src/cdpr_control/launch/: cdpr_simulation.launch.py
src/cdpr_control/rviz/: cdpr_visualization.rviz
src/cdpr_control/scripts/: cdpr_visualizer.py
src/cdpr_control/src/: cdpr_controller.cpp  cdpr_controller_simple.cpp
src/cdpr_control/worlds/: cdpr_8cables_valid.sdf
src/cdpr_description/: CMakeLists.txt
src/cdpr_gz_plugins/: CMakeLists.txt
src/cdpr_gz_plugins/src/: cdpr_cable_plugin.cpp
worlds/: cdpr_world.sdf  cdpr_world_full.sdf.bak  cdpr_world_with_cables.sdf
